@@ -1,25 +1,18 @@
-# $NetBSD: Makefile,v 1.3 2002/04/04 07:41:01 jlam Exp $
+# $NetBSD: Makefile,v 1.4 2002/10/19 03:03:50 jlam Exp $
 
 PKGNAME=		postgresql-docs-${BASE_VERS}
 COMMENT=		PostgreSQL database system documentation
 
-USE_BUILDLINK_ONLY=	YES
+USE_BUILDLINK2=		# defined
 
 .include "../../databases/postgresql/Makefile.common"
 
+BUILD_DIRS=		${WRKSRC}/doc
 DOCDIR=			${PREFIX}/share/doc/postgresql
 
 # The manpage documentation is installed with the relevant packages.
 pre-build:
 	cd ${WRKSRC}/doc && ${RM} -f man.tar.gz
-
-do-build:
-	cd ${WRKSRC}/doc && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${ALL_TARGET}
-
-do-install:
-	cd ${WRKSRC}/doc && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${INSTALL_TARGET}
 
 post-install:
 	${INSTALL_DATA_DIR} ${DOCDIR}
