@@ -1,34 +1,23 @@
-# $NetBSD: Makefile,v 1.5 2002/04/04 07:41:04 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2002/10/19 03:03:51 jlam Exp $
 
 PKGNAME=		postgresql-pltcl-${BASE_VERS}
 COMMENT=		PL/Tcl procedural language for the PostgreSQL backend
 
 DEPENDS+=		postgresql-server>=${BASE_VERS}:../../databases/postgresql-server
 
-USE_BUILDLINK_ONLY=	YES
+USE_BUILDLINK2=		# defined
 
 .include "../../databases/postgresql/Makefile.common"
 
-CONFIGURE_ARGS+=	--with-openssl=${BUILDLINK_DIR}
+CONFIGURE_ARGS+=	--with-openssl=${SSLBASE}
 CONFIGURE_ARGS+=	--with-tcl
-CONFIGURE_ARGS+=	--with-tclconfig="${BUILDLINK_DIR}/lib"
+CONFIGURE_ARGS+=	--with-tclconfig="${BUILDLINK_PREFIX.tcl}/lib"
 CONFIGURE_ENV+=		TCLSH="${TCLSH}"
 TCLSH=			${LOCALBASE}/bin/tclsh
 
-DIRS_TO_BUILD=		src/pl/tcl
+BUILD_DIRS=		${WRKSRC}/src/pl/tcl
 
-do-build:
-.for DIR in ${DIRS_TO_BUILD}
-	cd ${WRKSRC}/${DIR} && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${MAKE_FLAGS} ${ALL_TARGET}
-.endfor
+.include "../../databases/postgresql-lib/buildlink2.mk"
+.include "../../lang/tcl/buildlink2.mk"
 
-do-install:
-.for DIR in ${DIRS_TO_BUILD}
-	cd ${WRKSRC}/${DIR} && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${MAKE_FLAGS} ${INSTALL_TARGET}
-.endfor
-
-.include "../../databases/postgresql-lib/buildlink.mk"
-.include "../../lang/tcl/buildlink.mk"
 .include "../../mk/bsd.pkg.mk"
