@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2002/09/21 08:05:06 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2002/10/19 03:03:51 jlam Exp $
 
 PKGNAME=		tcl-postgresql-${BASE_VERS}
 COMMENT=		Tcl interface to PostgreSQL
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK2=		# defined
 
 .include "../../databases/postgresql/Makefile.common"
 
@@ -14,19 +14,8 @@ CONFIGURE_ENV+=		TCLSH="${TCLSH}"
 TCLSH=			${BUILDLINK_PREFIX.tcl}/bin/tclsh
 MAKE_ENV+=		INSTALLED_LIBPQ=1
 
-DIRS_TO_BUILD=		src/interfaces/libpgtcl src/bin/pgtclsh
-
-do-build:
-.for DIR in ${DIRS_TO_BUILD}
-	cd ${WRKSRC}/${DIR} && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${MAKE_FLAGS} ${ALL_TARGET}
-.endfor
-
-do-install:
-.for DIR in ${DIRS_TO_BUILD}
-	cd ${WRKSRC}/${DIR} && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${MAKE_FLAGS} ${INSTALL_TARGET}
-.endfor
+BUILD_DIRS=		${WRKSRC}/src/interfaces/libpgtcl
+BUILD_DIRS+=		${WRKSRC}/src/bin/pgtclsh
 
 post-install:
 	${GTAR} zxCf ${PREFIX}/man ${WRKSRC}/doc/man.tar.gz		\
