@@ -1,10 +1,10 @@
-# $NetBSD: Makefile,v 1.13 2002/09/21 08:08:18 jlam Exp $
+# $NetBSD: Makefile,v 1.14 2002/10/19 03:03:51 jlam Exp $
 
 PKGNAME=		tk-postgresql-${BASE_VERS}
 COMMENT=		Tk interface to PostgreSQL
 
-USE_BUILDLINK2=		YES
-USE_X11=		YES
+USE_BUILDLINK2=		# defined
+USE_X11=		# defined
 
 .include "../../databases/postgresql/Makefile.common"
 
@@ -17,21 +17,9 @@ CONFIGURE_ENV+=		TCLSH="${TCLSH}"
 TCLSH=			${BUILDLINK_PREFIX.tcl}/bin/tclsh
 MAKE_ENV+=		INSTALLED_LIBPQ=1 INSTALLED_LIBPGTCL=1
 
-DIRS_TO_BUILD=		src/bin/pgtclsh
+BUILD_DIRS=		${WRKSRC}/src/bin/pgtclsh
 ALL_TARGET=		pgtksh
 INSTALL_TARGET=		install-tk
-
-do-build:
-.for DIR in ${DIRS_TO_BUILD}
-	cd ${WRKSRC}/${DIR} && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${MAKE_FLAGS} ${ALL_TARGET}
-.endfor
-
-do-install:
-.for DIR in ${DIRS_TO_BUILD}
-	cd ${WRKSRC}/${DIR} && ${SETENV} ${MAKE_ENV}			\
-		${MAKE_PROGRAM} ${MAKE_FLAGS} ${INSTALL_TARGET}
-.endfor
 
 post-install:
 	${GTAR} zxCf ${PREFIX}/man ${WRKSRC}/doc/man.tar.gz		\
